fixed the text alignment in men

--- a/slate_project/source/stylesheets/screen.css.scss
+++ b/slate_project/source/stylesheets/screen.css.scss
@@ -961,8 +961,15 @@ blockquote {
 
 a.toc-h2.toc-link {
   width: 100%;
+  padding-top: 5px;
+}
+
+a.toc-h1.toc-link {
+  width: 100%;
+  padding-top: 5px;
 }
 
 a.toc-h2.toc-link.active {
   width: 75%;
 }
+
